[package]
edition = "2021"
name = "snork"
version = "0.2.1"
authors = [
    "Lars Wrenger <lars@wrenger.net>",
    "Leon Kattwinkel <leon.kattwinkel@gmx.de>",
    "Julian Krohne <krohnejulian@yahoo.de>",
    "Julian Gercke <julian.gercke@gmx.de>"
]
description = "High performant battlesnake agents written in rust"
license = "MIT"
default-run = "server"

[dependencies]
tokio = { version = "1.20", features = ["full"] }
warp = { version ="0.3", default_features = false }
rand = { version = "0.8", default_features = false, features = ["small_rng", "getrandom", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2", default-features = false, features = ["std", "derive"] }
owo-colors = "3.5"
async-recursion = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = { version = "0.9", default_features = false }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "benchmarks"
harness = false
test = false

[[bin]]
name = "server"
harness = false
test = false
bench = false

[[bin]]
name = "move"
harness = false
test = false
bench = false

[[bin]]
name = "simulate"
harness = false
test = false
bench = false

[profile.release]
lto = "thin"
opt-level = 3
strip = true
