[package]
edition = "2021"
name = "snork"
version = "0.2.3"
authors = [
    "Lars Wrenger <lars@wrenger.net>",
    "Leon Kattwinkel <leon.kattwinkel@gmx.de>",
    "Julian Krohne <krohnejulian@yahoo.de>",
    "Julian Gercke <julian.gercke@gmx.de>"
]
description = "High performant battlesnake agents written in rust"
license = "MIT"
default-run = "server"

[dependencies]
tokio = { version = "1.35", features = ["fs", "sync", "time", "macros", "rt-multi-thread"] }
warp = { version ="0.3", default_features = false }
rand = { version = "0.8", default_features = false, features = ["small_rng", "getrandom", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", default_features = false, features = ["std", "derive", "help", "usage"] }
owo-colors = "4.0"
async-recursion = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = { version = "0.11", default_features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[[bench]]
name = "benchmarks"
harness = false
test = false

[[bin]]
name = "server"
harness = false
test = false
bench = false

[[bin]]
name = "move"
harness = false
test = false
bench = false

[[bin]]
name = "simulate"
harness = false
test = false
bench = false
