[package]
edition = "2018"
name = "snork_core"
version = "0.1.0"
authors = ["Lars Wrenger <lars@wrenger.net>", "Julian Krohne <krohnejulian@yahoo.de>", "Julian Gercke <julian.gercke@gmx.de>"]
description = "High performant battlesnake agents written in rust"
license = "MIT"
readme = "../README.md"

[dependencies]
rand = {version = "0.8", features = ["small_rng"]}
serde = "1.0"
serde_json = "1.0"
owo-colors = "2.0"
